# LLVM-tutorial

./: .gitmodules  LLVM-Installation-Steps.md  LLVM-in-source-pass-steps.md
llvm-out-of-source-tree-pass/: CMakeLists.txt  PPProfiler.cpp  a.out  hello.bc  hello.c  hello.ll  hello_inst.bc  output.ll  ppprofile.csv  runtime.c
llvm/lib/Transforms/: CMakeLists.txt
llvm/lib/Transforms/PPProfiler/: CMakeLists.txt  PPProfiler.cpp
